network/VPC.tf
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc_cidr  
  tags = {
    Name = "main-vpc"
  }
}
